kubernetes/config/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-service-network-policy
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
  - Ingress
  ingress:
  - {} # Her yerden erişime izin ver (Orijinal hal)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-service-network-policy
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: product-service
  policyTypes:
  - Ingress
  ingress:
  - {} # Her yerden erişime izin ver (Orijinal hal)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stock-service-network-policy
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: stock-service
  policyTypes:
  - Ingress
  ingress:
  - {} # Her yerden erişime izin ver (Orijinal hal)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-service-network-policy
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
  - Ingress
  ingress:
  - {} # Her yerden erişime izin ver (Orijinal hal)
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-network-policy
  namespace: ecommerce
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
  - Ingress
  ingress:
  - {}  # Allow all ingress to API Gateway (for port-forward and external access)
